# Object-Serialization

./: CMakeLists.txt  README.md  Requests.md  test.sh
include/: bin_Serialization.h  macro.h  serialize.h  test.h  xml_Serialization.h
src/: test.cpp  tinyxml2.cpp
